--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <hr />
+    <%= render 'layouts/notices' %>
     <%= yield %>
   </body>
 </html>
