--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,29 @@
 @import "materialize";
+
+.space-top {
+  margin-top: 20px;
+}
+
+.space-top-more {
+  margin-top: 50px;
+}
+
+.no-space {
+  margin: 0px !important;
+}
+
+.page-title {
+  margin-bottom: 20px;
+}
+
+.no-padding {
+  padding: 0px;
+}
+
+.card-content-customize {
+  padding: 18px 24px !important;
+}
+
+.poster-image {
+  max-width: 100%;
+}
