--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Category</h1>
-<%= render 'common/errors', obj: @category %>
-<%= render 'form' %>
+<div class="row space-top-more">
+  <div class="col s12 m10 l8 offset-m1 offset-l2">
+    <div class="card-panel">
+      <h4 class="center-align">Edit Category</h4>
+      <%= render 'common/errors', obj: @category %>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
