--- a/app/views/layouts/_notices.html.erb
+++ b/app/views/layouts/_notices.html.erb
@@ -1,3 +1,13 @@
 <% flash.each do |type, msg| %>
-  <%= msg %>
+  <div class="container">
+    <div class="row space-top">
+      <div class="col s12">
+        <div class="card-panel red lighten-2" id="fade-out">
+          <span class="white-text">
+            <%= msg %>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
