--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Movie</h1>
-<%= render 'common/errors', obj: @movie %>
-<%= render 'form' %>
+<div class="row space-top-more">
+  <div class="col s12 m10 l8 offset-m1 offset-l2">
+    <div class="card-panel">
+      <h4 class="center-align">Edit Movie</h4>
+      <%= render 'common/errors', obj: @movie %>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
