--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,16 @@
-<%= form_for @category do |f| %>
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name, placeholder: 'Enter category name', autofocus: true %>
-  </p>
-  <p>
-    <%= f.submit @category.new_record? ? 'Create' : 'Update' %>
-    <%= link_to 'Cancel', @category.new_record? ? root_path : category_path(@category) %>
-  </p>
-<% end %>
+<div class="row">
+  <%= form_for(@category, html: { class: "col s12" }) do |f| %>
+    <div class="row no-space">
+      <div class="input-field col s12">
+        <%= f.text_field :name, placeholder: 'Enter category name' %>
+        <%= f.label :name, class: "active" %>
+      </div>
+    </div>
+    <div class="row no-space">
+      <div class="input-field col s12">
+        <%= f.submit @category.new_record? ? 'Create' : 'Update', class: "waves-light btn" %>
+        <%= link_to 'Cancel', @category.new_record? ? root_path : category_path(@category), class: "waves-light btn grey" %>
+      </div>
+    </div>
+  <% end %>
+</div>
