--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,22 +1,32 @@
-<%= form_for @customer do |f| %>
-  <p>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, placeholder: 'Enter first name' %>
-  </p>
-  <p>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name, placeholder: 'Enter last name' %>
-  </p>
-  <p>
-    <%= f.label :phone %>
-    <%= f.telephone_field :phone, placeholder: 'Enter phone number' %>
-  </p>
-  <p>
-    <%= f.label :email %>
-    <%= f.email_field :email, placeholder: 'Enter email address' %>
-  </p>
-  <p>
-    <%= f.submit(@customer.new_record? ? 'Register' : 'Update') %>
-    <%= link_to 'Cancel', @customer.new_record? ? root_path : customer_path(@customer) %>
-  </p>
-<% end %>
+<div class="row">
+  <%= form_for(@customer, html: { class: "col s12" }) do |f| %>
+    <div class="row no-space">
+      <div class="input-field col s6">
+        <%= f.text_field :first_name, placeholder: 'Enter first name' %>
+        <%= f.label :first_name, class: "active" %>
+      </div>
+      <div class="input-field col s6">
+        <%= f.text_field :last_name, placeholder: 'Enter last name' %>
+        <%= f.label :last_name, class: "active" %>
+      </div>
+    </div>
+    <div class="row no-space">
+      <div class="input-field col s12">
+        <%= f.telephone_field :phone, placeholder: 'Enter phone number' %>
+        <%= f.label :phone, class: "active" %>
+      </div>
+    </div>
+    <div class="row no-space">
+      <div class="input-field col s12">
+        <%= f.email_field :email, placeholder: 'Enter email address' %>
+        <%= f.label :email, class: "active" %>
+      </div>
+    </div>
+    <div class="row no-space">
+      <div class="input-field col s12">
+        <%= f.submit @customer.new_record? ? 'Register' : 'Update', class: "waves-light btn" %>
+        <%= link_to 'Cancel', @customer.new_record? ? root_path : customer_path(@customer), class: "waves-light btn grey" %>
+      </div>
+    </div>
+  <% end %>
+</div>
