--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <hr />
     <%= render 'layouts/notices' %>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
