--- a/app/views/customers/_profile.html.erb
+++ b/app/views/customers/_profile.html.erb
@@ -12,30 +12,32 @@
       <p>Phone: <%= @customer.phone %></p>
       <p>Email: <%= @customer.email %></p>
       <p>To return: <%= pluralize(@customer.rentals.select{ |r| r.returned_at.blank? }.count, 'DVD') %></p>
-      <table class="highlight responsive-table">
-        <thead>
-          <tr>
-            <th>Rented on</th>
-            <th>Returned on</th>
-            <th>Movie</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @customer.rentals.each do |r| %>
+      <% if !@customer.rentals.blank? %>
+        <table class="highlight responsive-table">
+          <thead>
             <tr>
-              <td><%= r.created_at.strftime("%Y-%m-%d") %></td>
-              <td>
-                <% if !r.returned_at.blank? %>
-                  <%= r.returned_at.strftime("%Y-%m-%d") %>
-                <% else %>
-                  <i>Not returned yet</i>
-                <% end %>
-              </td>
-              <td><%= link_to r.movie.title, movie_path(r.movie) %></td>
+              <th>Rented on</th>
+              <th>Returned on</th>
+              <th>Movie</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <% @customer.rentals.each do |r| %>
+              <tr>
+                <td><%= r.created_at.strftime("%Y-%m-%d") %></td>
+                <td>
+                  <% if !r.returned_at.blank? %>
+                    <%= r.returned_at.strftime("%Y-%m-%d") %>
+                  <% else %>
+                    <i>Not returned yet</i>
+                  <% end %>
+                </td>
+                <td><%= link_to r.movie.title, movie_path(r.movie) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
       <% if !admin? %>
         <%= link_to 'Lookup Another Email', logout_path, method: :delete, class: "waves-effect waves-teal btn space-top" %>
       <% end %>
