--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,7 +43,7 @@
                   <% if !r.returned_at.blank? %>
                     <%= r.returned_at.strftime("%Y-%m-%d") %>
                   <% else %>
-                    <i>Not returned yet</i>
+                    <i class="red-text">Not returned yet</i>
                   <% end %>
                 </td>
                 <td>
