--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -19,7 +19,7 @@
                 <% if !r.returned_at.blank? %>
                   <%= r.returned_at.strftime("%Y-%m-%d") %>
                 <% else %>
-                  <i>Not returned yet</i>
+                  <i class="red-text">Not returned yet</i>
                 <% end %>
               </td>
               <td>
