--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -20,7 +20,7 @@
             <strong>Categories: </strong><%= render @movie.categories %>
           <% end %>
           <p>Total Copies: <%= @movie.max_quantity %></p>
-          <p>In stock: <%= @movie.current_inventory %></p>
+          <p>In store: <%= @movie.current_inventory %></p>
         </div>
       </div>
       <div class="right-align">
